:sparkles: add create/update page

--- a/开发文档.md
+++ b/开发文档.md
@@ -6,7 +6,7 @@
 
 #### 描述
 
-能输入（新增、删除）配件名称、数量、价格，自动计算出总价，选择付款方式、付款人，输入付款金额保存订单进行结算。
+能输入（新增、删除）配件名称、数量、价格，自动计算出总价，输入/选择时间，选择付款方式、付款人，输入付款金额保存订单进行结算。
 
 #### 细节描述
 
@@ -28,4 +28,49 @@
  #### 测试
 
 问题1: 前后端时间对不上，统一用iso8601的标准格式。
+
+## 消费单管理
+
+### 需求1 【基本需求】【WIP】
+
+#### 描述
+
+1. 输入/选择消费车辆，自动展示车主姓名、车主电话，上次进店里程，日期，提示填写当前里程
+2. 新增/删除 配件/服务，提示参考单价，手动选择数量，默认整数值；输入实际单价，自动计算每个配件/服务价格，消费单总价随之更新
+   1. 配件数量不得超过库存量、实际单价若低于平均进价则给出提示
+3. 提示订单状态——待结算、已结算
+   1. 进行结算需要输入付款金额、付款方式、收款人
+4. 
+
+#### 细节描述
+
+- 删除后，点击保存作为一个完整的流程。✅
+- 页面缓存，从别的页面返回后内容不消失
+
+#### 进度
+
+
+
+## 经验总结
+
+### 如何实现同时打开多个相同页面
+
+比如消费单可以同时查看多个，同时新增
+
+方法：vue router，浏览器通过path识别特定的页面
+
+配置时
+
+```
+web_path: /saleOrderDetailPage/:id?
+```
+
+跳转时
+
+```c++
+this.$router.push({
+	name: 'purchaseOrderDetailPage',
+	params: {purchase_order: row.row, id: row.row.id}
+})
+```
 
